# Stream_Pay

./: .gitignore  Cargo.toml  DEMO_SCRIPT.md  Makefile  README.md  SUBMISSION_CHECKLIST.md  WAVE3_SUBMISSION.md  build.sh  deploy.sh  test-local.sh
_archive_old_files/: CLAUDE_SESSION_SUMMARY.md  DEMO_INSTRUCTIONS.md  DEPLOYMENT_GUIDE.md  PROJECT_SUMMARY.md  QUICKSTART.md  TESTING_GUIDE.md  frontend_prompt.md
frontend/: .env  index.html  package.json  query-streams.js  tailwind.config.js
frontend/src/: App-Demo.tsx  App-Simple.tsx  App.css  App.tsx  config.ts  index.css
frontend/src/components/: LiveCounter.tsx  StreamCard.tsx
stream/: Cargo.toml
stream/src/: contract.rs  lib.rs  service.rs  state.rs
token/: Cargo.toml
token/src/: contract.rs  lib.rs  service.rs  state.rs
